@@ -7,6 +7,7 @@
 /mkimage.conf.autosave*
 /mkimage.conf.defaults
 /initial_setup.desc
+/.version
 # dot files are usually swu build dirs: ignore all except a few patterns
 .*
 !.gitignore
