@@ -10,6 +10,7 @@ no encryption and already compressed files
  - sync and dismount installed system before flipping boot switch:
 this ensures the system should not be broken if power is cut immediately
 after boot switch/notification.
+ - fix temporary cleanup of unused files
 
 3.15-at.6
 =========
